# FBI-Fraud

./: .gitignore  README.md  __init__.py  deepseekOcr  gemini_test.ipynb  ocr_endpoint.py  pdfScraping  pdfScraping.py  pyproject.toml  requirements.txt
