[project]
name = "fbi-fraud"
version = "0.1.0"
description = "A final project for DTSC 3602 looking at fraud detection from the FBI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

dependencies = [
    # Core dependencies
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    
    # Data processing
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    
    # ML/AI dependencies
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "vllm>=0.4.0",
    "Pillow>=10.0.0",
    
    # Jupyter notebook support
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fbi_fraud"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
